<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1c4e9">


    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:background="#81c784"
        android:textColor="#4a148c"
        android:layout_alignTop="@+id/false_button"
        android:layout_toLeftOf="@+id/cheat_button"
        android:layout_toStartOf="@+id/cheat_button" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        android:background="#81c784"
        android:textColor="#4a148c"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/next_button"
        android:layout_toRightOf="@+id/cheat_button"
        android:layout_toEndOf="@+id/cheat_button" />


    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1b5e20"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        android:background="#a5d6a7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="#4a148c"
        android:layout_margin="16dp"
        />


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:background="#a5d6a7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="#4a148c"
        android:layout_margin="16dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:id="@+id/cheat_button"
        android:layout_alignBottom="@+id/next_button"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/java_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/java"
        android:contentDescription="@string/content_desc_Java"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/previous_button"
        android:layout_above="@+id/question_text_view"
        android:scaleType="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_score_button"
        android:id="@+id/check_score_button"
        android:layout_above="@+id/next_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp" />


</RelativeLayout>
